--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <link rel="stylesheet" href="styles/main.scss">
 </head>
 <body>
-    <h1>olá</h1>
-    <img src="./images/backend.png" alt="">
+   <header class="hero">
+    <div class="container">
+        <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
+        <p class="hero__text">
+            O Maior evento de tecnololgia do Brasil começa em <span id="contador"></span>
+        </p>
+        <div class="infos-bar">
+            <ul class="infos-bar__infos">
+                <li class="infos-bar__infos__item">
+                    <b>Localização</b>
+                    Allianz Parque - Barra Funda - São Paulo
+                </li>
+                <li class="infos-bar__infos__item">
+                    <b>Preço</b>
+                    A partir de R$ 120,00
+                </li>
+                <li class="infos-bar__infos__item">
+                    <b>Quando</b>
+                    12/12/2024 às 19hrs
+                </li>
+            </ul>
+            <a href="#" class="button button--primary">
+                Garanta sua Vaga
+            </a>
+        </div>
+    </div>
+   </header>
+
+   <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__detail">
+                <h2 class="event__detail__title">Front-end</h2>
+                <p class="event__detail__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, distinctio quaerat iure, numquam amet nisi porro laboriosam quia excepturi libero sapiente? Amet, neque pariatur earum quisquam deserunt vitae facilis. Aliquam!
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+   </section>
+   <section class="event event--ux-ui event--image-left" >
+    <div class="container" data-aos="fade-left">
+        <div class="event__detail">
+            <h2 class="event__detail__title">Ux & Ui</h2>
+            <p class="event__detail__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, distinctio quaerat iure, numquam amet nisi porro laboriosam quia excepturi libero sapiente? Amet, neque pariatur earum quisquam deserunt vitae facilis. Aliquam!
+            </p>
+        </div>
+        <img class="event__image" src="./images/ui-ux.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__detail">
+                <h2 class="event__detail__title">Data Science</h2>
+                <p class="event__detail__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, distinctio quaerat iure, numquam amet nisi porro laboriosam quia excepturi libero sapiente? Amet, neque pariatur earum quisquam deserunt vitae facilis. Aliquam!
+                </p>
+            </div>
+            <img class="event__image" src="./images/data.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__detail">
+                <h2 class="event__detail__title">Backend</h2>
+                <p class="event__detail__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, distinctio quaerat iure, numquam amet nisi porro laboriosam quia excepturi libero sapiente? Amet, neque pariatur earum quisquam deserunt vitae facilis. Aliquam!
+                </p>
+            </div>
+            <img class="event__image" src="./images/backend.png" alt="Front-end">
+        </div>
+    </section>
 
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
